syntax = "proto3";

package like;

import "internal/pkg/paginator/page.proto";
import "api/common/object/v1/object.proto";

option go_package = "harmoni/api/like/grpc/v1;v1";

message LikeRequest {
    object.ObjectType object_type = 1;    
    int64 userID = 2;
    int64 objectID = 3;
    int64 targetUserID = 4;
    bool isCancel = 5;
}

message LikeReply {}

message UserLikeListRequest {
    paginator.PageRequest page_request = 1;
    object.ObjectType object_type = 2;
    int64 userID = 3;
}

message LikeEntity {
    object.ObjectType object_type = 1;
    int64 objectID = 2;
    int64 targetUserID = 3;
}

message LikeListReply {
    paginator.PageRely page_rely = 1;
    repeated LikeEntity likeList = 2;
}

message ObjectLikeListRequest {
    paginator.PageRequest page_request = 1;
    object.ObjectType object_type = 2;
    int64 objectID = 3;
}

message LikeCountReply {
    int64 count = 1;
}

message ListLikeCountRequest {
    repeated int64 object_ids = 1;
    object.ObjectType object_type = 2;
}

message ListLikeCountReply {
    map<int64, int64> counts = 1;
}

service Like {
    rpc Like (LikeRequest) returns (LikeReply);
    rpc UserLikeList (UserLikeListRequest) returns (LikeListReply);
    rpc ObjectLikeList (ObjectLikeListRequest) returns (LikeListReply);
    rpc LikeCount (object.Object) returns (LikeCountReply);
    rpc ListLikeCount (ListLikeCountRequest) returns (ListLikeCountReply);
}
